[package]
name = "fastix"
version = "0.1.0"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
edition = "2021"
description = "prefix renaming FASTA records"
license = "MIT"
repository = "https://github.com/ekg/fastix"
readme = "README.md"
keywords = ["bioinformatics", "FASTA"]
categories = ["science"]

[dependencies]
clap = "2.33.0"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.2"
